--- a/save/questnumber/questnumber/questnumber.csproj
+++ b/save/questnumber/questnumber/questnumber.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A57C7B2C-E5BF-4757-B7B9-809AE3113E8C}</ProjectGuid>
+    <ProjectGuid>{BF0BE141-55F4-41CC-83F1-16A9186D45C6}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>FileConsole</RootNamespace>
-    <AssemblyName>FileConsole</AssemblyName>
+    <RootNamespace>questnumber</RootNamespace>
+    <AssemblyName>questnumber</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,16 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Copior.cs" />
-    <Compile Include="FileWriter.cs" />
-    <Compile Include="FolderReader.cs" />
-    <Compile Include="FUCK.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="FileReader.cs" />
-    <Compile Include="TestFileReader.cs" />
-    <Compile Include="testFolder.cs" />
-    <Compile Include="TestFolderReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
